--- a/index.html
+++ b/index.html
@@ -1,161 +1,178 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <nav>
-      <div class="left-nav">
-        <div class="button-group">
-          <button class="rounded-btn">Museo Sans</button>
-          <button class="rounded-btn">Collections</button>
-          <button class="rounded-btn">Our Mission</button>
-          <button class="rounded-btn">Events</button>
-        </div>
-      </div>
-      <div class="right-nav">
-        <button class="rounded-btn">Contact Now</button>
-      </div>
-    </nav>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Document</title>
-    <style>
-      body {
-        background-color: #1a1c19;
-      }
-    </style>
-
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Suwannaphum:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <nav class="navbar" style="display: flex">
-      <div class="left_half">
-        <div class="item i1">Museo Sans</div>
-        <div class="navg" style="display: flex">
-          <div class="item i2">Collections</div>
-          <div class="item i3">Menu</div>
-          <div class="item i4">Events</div>
-        </div>
-      </div>
-      <div class="right_half">
-        <div class="item i5">Contact</div>
-      </div>
-    </nav>
+    <div class="super-main-container">
+      <header class="header">
+        <nav class="navbar">
+          <div class="left-nav">
+            <div class="nav-item-1 nav-item">Museo Sans</div>
 
-    <main>
-      <div class="left-part">
-        <div class="div1">
-          <div class="i6">LOREUMIPSUM</div>
-          <h3 class="heading1">Loreum Ipsum Heading</h3>
-          <div class="img1div">
-            <img class="img1" src="image/contest2.png" alt="" />
+            <div class="nav-item-2 nav-item nav-item-h">Collections</div>
+            <div class="nav-item-3 nav-item nav-item-h">Our mission</div>
+            <div class="nav-item-4 nav-item nav-item-h">Events</div>
           </div>
-          <div class="line"></div>
-          <div class="btm2">
-            <h3 class="head3">Get started</h3>
-            <span class="material-symbols-outlined"> arrow_right_alt </span>
+          <div class="right-nav">
+            <div class="nav-item-mb nav-item-mb nav-item-h">Menu</div>
+            <div class="right-nav-item-1 nav-item-h nav-item">Contact now</div>
+          </div>
+        </nav>
+      </header>
+      <main class="main">
+        <div class="main-div">
+          <!-- div - 1 -->
+          <div class="div-container div-container-1">
+            <div class="padding-div">
+              <div class="item-1-heading item-heading">CONGREVE STREET</div>
+              <div class="item-1-subheading item-subheading">
+                <p class="item-p item-p-1 sub-heading-items">Birmingham</p>
+                <u class="underling-text"
+                  ><p class="item-p item-p-2 sub-heading-items">Museums.</p></u
+                >
+              </div>
+              <div class="item-1-img">
+                <img
+                  src="./image/contest2.png"
+                  alt="item-1"
+                  class="item-1-image item-image"
+                />
+              </div>
+            </div>
+            <div class="div-container-1-bottom">
+              <div class="item-footer1">GET STARTED</div>
+              <div class="item-footer2">
+                <span class="material-symbols-rounded arrow-active"
+                  >line_end_arrow_notch
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- div 2 -->
+          <div class="div-container div-container-2">
+            <div class="div-main-container-2">
+              <div class="div-container-2-left">
+                <div class="item-heading item-heading-2">EUROPEANA</div>
+                <div class="item-2-subheading item-subheading">
+                  <p class="item-p item-p-1 sub-heading-items">
+                    A Woman Slicing
+                  </p>
+                  <u class="underling-text"
+                    ><p class="item-p item-p-2 sub-heading-items">Bread.</p></u
+                  >
+                </div>
+                <p class="paragraph-div">
+                  DATE: 1800. INSTITUTION: RIJKSMUSEUM. PROVIDER: RIJKSMUSEUM.
+                  PROVIDING COUNTRY: NETHERLANDS. PUBLIC DOMAIN. PHOTO BY
+                  EUROPEANA.
+                </p>
+              </div>
+              <div class="div-container-2-right">
+                <img
+                  src="./image/contest3.png"
+                  alt="item-2"
+                  class="item-2-image item-image"
+                />
+              </div>
+            </div>
+            <div class="div-container-2-bottom">
+              <div class="item-footer1">GET STARTED</div>
+              <div class="item-footer2">
+                <span class="material-symbols-rounded arrow-active"
+                  >line_end_arrow_notch
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- div -3   -->
+
+          <div class="div-container div-container-3">
+            <div class="image-div-container-3">
+              <img src="./image/contest1.png" alt="" />
+            </div>
+            <div class="div-name-dot">
+              <div class="div-name">Portrait</div>
+              <div class="div-dot">
+                <div class="round-dot"></div>
+                <div class="round-dot"></div>
+                <div class="round-dot"></div>
+              </div>
+            </div>
+            <p class="paragraph-div-3">
+              PORTRAIT OF MARITGE CLAESDR VOOGHT. DATE: 1639. INSTITUTION:
+              RIJKSMUSEUM. PROVIDER: RIJKSMUSEUM. PROVIDING COUNTRY:
+              NETHERLANDS. PUBLIC DOMAIN
+            </p>
+            <div class="div-container-3-bottom">
+              <div class="item-footer1">GET STARTED</div>
+              <div class="item-footer2">
+                <span class="material-symbols-rounded arrow-active"
+                  >line_end_arrow_notch
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- div 4 -->
+          <div class="div-container div-container-4">
+            <div class="profile-image-text">
+              <div class="profile-name">
+                <div class="item-heading item-heading-2 item-heading-3">
+                  EUROPEANA
+                </div>
+              </div>
+              <div class="profile-image image-div-container-3">
+                <img src="./image/contest4.png" alt="" />
+              </div>
+            </div>
+
+            <div class="item-4-subheading item-subheading">
+              <p class="item-p item-p-1 sub-heading-items">Vintage</p>
+              <u class="underling-text"
+                ><p class="item-p item-p-2 sub-heading-items">Painting.</p></u
+              >
+            </div>
+            <p class="paragraph-div div-4-par">
+              PORTRAIT OF A MAN. DATE: 1648. INSTITUTION: RIJKSMUSEUM. PROVIDER:
+              RIJKSMUSEUM. PROVIDING COUNTRY: NETHERLANDS. PUBLIC DOMAIN
+            </p>
+            <div class="div-black-line"></div>
+            <div class="div-two-name">
+              <div class="div4-name-one">PUBLIC DOMAIN</div>
+              <div class="div4-name-two">NETHERLANDS</div>
+            </div>
+            <div class="div-black-line"></div>
+            <div class="div-black-line"></div>
+
+            <div class="div-container-3-bottom">
+              <div class="item-footer1">GET STARTED</div>
+              <div class="item-footer2">
+                <span class="material-symbols-rounded arrow-active"
+                  >line_end_arrow_notch
+                </span>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="right-part">
-        <div class="cont">
-          <div class="div2">
-            <div class="left-half">
-              <div class="i6">LOREUMIPSUM</div>
-              <h3 class="heading1">Loreum Ipsum Heading</h3>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-            <div class="right-half">
-              <img class="image2" src="image/contest3.png" alt="" />
-            </div>
-          </div>
-          <div class="bt1">
-            <h3 class="head3">Get started</h3>
-            <span class="material-symbols-outlined"> arrow_right_alt </span>
-          </div>
-        </div>
+      </main>
+      <footer class="footer"></footer>
+    </div>
 
-        <div class="last2">
-          <div class="div3">
-            <div class="divimage3">
-              <img class="image3" src="image/contest1.png" alt="" />
-            </div>
-            <h3 class="heading1">Portrait</h3>
-            <div class="p1">
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-            <div class="line"></div>
-            <div class="btm2">
-              <h3 class="head3">Get started</h3>
-              <span class="material-symbols-outlined"> arrow_right_alt </span>
-            </div>
-          </div>
-
-          <!-- //4 col -->
-          <div class="div4">
-            <div class="i6">LOREUMIPSUM</div>
-            <div class="both">
-              <h3 class="heading1 last-head">Portrait</h3>
-              <img class="img2" src="image/contest4.png" alt="" />
-            </div>
-            <div class="para-last">
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-            </div>
-
-            <div class="line"></div>
-            <div class="btm2 last-col">
-              <h3 class="head3">Get started</h3>
-              <span class="material-symbols-outlined"> arrow_right_alt </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
+    <script src="./index.js"></script>
   </body>
 </html>
